[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Kenney Future Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Main_UI.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Key0.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="Main_UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rest_Timer" type="Label" parent="."]
visible = false
margin_left = 16.379
margin_top = 21.4187
margin_right = 56.379
margin_bottom = 35.4187
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.105882, 0.105882, 0.105882, 0.807843 )
text = "15"
align = 1
valign = 1

[node name="One_Second" type="Timer" parent="."]
one_shot = true

[node name="Key" type="Sprite" parent="."]
position = Vector2( 975.439, 43.7266 )
z_index = 3
texture = ExtResource( 3 )

[node name="Continue" type="Button" parent="."]
visible = false
anchor_left = 0.45
anchor_top = 0.45
anchor_right = 0.55
anchor_bottom = 0.45
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="."]
visible = false
anchor_left = 0.45
anchor_top = 0.5
anchor_right = 0.55
anchor_bottom = 0.5
margin_bottom = 20.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
visible = false
anchor_left = 0.45
anchor_top = 0.55
anchor_right = 0.55
anchor_bottom = 0.55
text = "Exit"

[connection signal="timeout" from="One_Second" to="." method="_on_One_Second_timeout"]
[connection signal="pressed" from="Continue" to="." method="Continue"]
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
